k8s-manifests/overlays/dev/superapp/client/payments/patch/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: split-payment
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: split-payment
        image: harbor.cbe.com.et/cbe-superapp/split-payment-dev
        imagePullPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-app
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: mini-app
        image: harbor.cbe.com.et/cbe-superapp/mini-app-dev
        imagePullPolicy: Always
