k8s-manifests/overlays/dev/superapp/client/payments/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: split-payment-route

spec:
  path: /api/v1/cbesuperapp/split_payment
  to:
    name: split-payment-dev
    weight: 100
    kind: Service
  host: deverpsuperapp.cbe.com.et
  port:
    targetPort: 8069
